# Chatbot

./: .env.example  .gitignore  ChatBot.md  EVALS.md  README.md  compose.yaml  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_storage_consistency.py  0003_tool_cache.py
backend/app/: cache.py  checkpointing.py  config.py  main.py  observability.py  streaming.py
backend/app/agents/: __init__.py  artifact.py  general.py  research.py  supervisor.py
backend/app/context_index/: __init__.py  service.py
backend/app/database/: engine.py  messages.py  migrate.py  models.py  observability.py
backend/app/graph/: README.md  builder.py  context.py  context_index_nodes.py  context_manager.py  context_window.py  deep_search.py  events.py  message_conversion.py  model.py  nodes.py  router.py  routing.py  specialists.py  state.py  supervisor.py  tool_execution.py
backend/app/llm/: client.py  models.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/routers/: auth.py  chat.py  conversations.py  observability.py
backend/app/schemas/: auth.py  chat.py  conversation.py  observability.py
backend/app/tools/: __init__.py  artifact.py  calculate.py  deep_search.py  registry.py  weather.py  web_search.py
backend/tests/: test_agent_architecture.py  test_checkpointing.py  test_context_index.py  test_context_manager.py  test_context_window.py  test_observability.py  test_sse_resumption.py  test_storage.py
scripts/: eval-cache.py  eval-checkpoint.py  eval-context-index.py  eval-sse.mjs  rebuild-context-index.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/[...path]/: route.ts
src/app/evals/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/components/: ActivityTimeline.tsx  ArtifactCard.tsx  ArtifactPanel.tsx  AuthGuard.tsx  ChatComposer.tsx  ChatView.tsx  CodeBlock.tsx  EvaluationLab.tsx  Markdown.tsx  MessageBubble.tsx  ModelSelector.tsx  ObservabilityDashboard.tsx  SSEPerformanceEval.tsx  Sidebar.tsx  SourcesFootnotes.tsx  ThemeToggle.tsx  ToolInvocation.tsx
src/hooks/: useChatStream.ts
src/lib/: api.ts  artifact-security.ts  artifacts.ts  auth.ts  models.ts  partial-json.ts  sse-eval.ts  sse-session.ts  sse-stream.ts  store.ts  streaming-markdown.ts  types.ts
src/providers/: AuthProvider.tsx
(+1 files in other folders)
